# wms

./: docker-compose.yml
stock-hydra/: Cargo.toml
stock-hydra/src/: dto.rs  lib.rs  log.rs  main.rs
stock-hydra/src/adapter/: request.rs  response.rs
stock-hydra/src/controllers/: mod.rs  stock_controller.rs
stock-hydra/src/infrastructure/: mod.rs
stock-hydra/src/infrastructure/database/: mod.rs
stock-hydra/src/routes/: mod.rs  routes_stock.rs
