[package]
name = "stock-hydra"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
